Rework provider data accessor